--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "babel-preset-env": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "vue": "^2.5.17",
+    "vue-agile": "^0.3.7",
     "vue-axios": "^2.1.4",
     "vue-loader": "^15.4.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.23.0",
@@ -28,6 +30,9 @@
   },
   "dependencies": {
     "@babel/core": "^7.1.2",
-    "css-loader": "^1.0.0"
+    "css-loader": "^1.0.0",
+    "style-loader": "^0.23.1",
+    "vue-carousel": "^0.16.0-rc1",
+    "vue-plain-slider": "^1.1.0"
   }
 }
