--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^1.0.0",
     "style-loader": "^0.23.1",
     "vue-carousel": "^0.16.0-rc1",
+    "vue-js-modal": "^1.3.26",
     "vue-plain-slider": "^1.1.0",
     "vue-textarea-autosize": "^1.0.4"
   }
