--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
   "dependencies": {
     "@babel/core": "^7.1.2",
     "css-loader": "^1.0.0",
+    "luxon": "^1.5.0",
     "style-loader": "^0.23.1",
     "vue-carousel": "^0.16.0-rc1",
+    "vue-datetime": "^1.0.0-beta.8",
     "vue-js-modal": "^1.3.26",
     "vue-plain-slider": "^1.1.0",
-    "vue-textarea-autosize": "^1.0.4"
+    "vue-textarea-autosize": "^1.0.4",
+    "weekstart": "^1.0.0"
   }
 }
